<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.sukritgulati.multinotes.InfoActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/background"
        android:id="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"


        android:contentDescription="@string/content"
        android:scaleType="fitXY" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textTitle"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        tools:text="@string/app_name" />

    <TextView
        android:text="@string/Author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textAuthor"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textAuthor"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        android:textSize="24sp"
        android:textColor="@android:color/black" />


</android.support.constraint.ConstraintLayout>
