<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="10dp"
        android:id="@+id/CardView"
        app:cardBackgroundColor="@color/colorNew"
        android:layout_marginBottom="16dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/DateTextView"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="@string/time"
                android:textSize="14sp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@+id/TitleTextView"
                android:maxLength="80"
                android:ellipsize="end" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/TitleTextView"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="22sp"
                tools:text="@string/title"
                android:textStyle="normal|bold"
                android:textColor="@android:color/black"
                android:maxLength="80"
                android:ellipsize="end"
                app:layout_constraintRight_toRightOf="@+id/DateTextView"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/IdTextView"
                tools:text="@string/id"
                android:visibility="invisible"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/TitleTextView"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ContentTextView"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp"
                app:layout_constraintTop_toBottomOf="@+id/DateTextView"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="4dp"
                android:ellipsize="end"
                android:scrollHorizontally="true"
                tools:text="@string/content"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>